[package]
name = "codeowners-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.0"
anyhow = "1.0.66"
regex = "1.6.0"
clap = { version = "4.0.18", features = ["derive"] }
regex-syntax = "0.6.27"
rayon = "1.5.3"

[profile.release]
debug = true
