[package]
name = "codeowners-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
memchr = "2.5.0"
rayon = { version = "1.5.3", optional = true }
regex = "1.6.0"
regex-syntax = "0.6.27"
thread_local = "1.1.4"
walkdir = "2.0"

[features]
default = ["parallel"]
parallel = ["rayon"]

[profile.release]
debug = true
