[package]
name = "codeowners-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeowners"
path = "src/bin/codeowners.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1.0.66", optional = true }
clap = { version = "4.0.18", features = ["derive"], optional = true }
memchr = "2.5.0"
rayon = { version = "1.5.3", optional = true }
regex = "1.6.0"
regex-syntax = "0.6.27"
thread_local = { version = "1.1.4", optional = true }
walkdir = { version = "2.0", optional = true }

[features]
cli = ["anyhow", "clap", "thread_local", "rayon", "walkdir"]

[profile.release]
debug = true
