[package]
name = "codeowners"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.2.2", features = ["derive"] }
codeowners-rs = { path = "../codeowners-rs" }
rayon = { version = "1.5.3", optional = true }
thread_local = "1.1.4"
walkdir = "2.0"

[features]
default = ["rayon"]
