[package]
name = "codeowners-rs"
version.workspace = true
edition = "2021"
description = "A library for parsing and matching CODEOWNERS files"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hmarr/codeowners-rs"

[dependencies]
memchr = "2.5.0"
once_cell = "1.17.1"
regex = "1.6.0"
regex-syntax = "0.6.27"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "patternset_benchmark"
harness = false
